--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ button{
     width: 219px;
     height: 56px;
     filter:  drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
 }
 .button1{
     font-family: Epilogue;
