--- a/styles.css
+++ b/styles.css
@@ -373,9 +373,18 @@ ul{
 @media screen and (max-width: 375px){
     body{background-color: #FAF8F6;} header{width: 343px; height: 48px; left: 16px; top: 24px;} .textbox{
         width: 343.3px; height: 325.32px; left: 15.5px; top: 128px;
-    } .imghero{width: 343px; height: 240px; left: 16px; top: 709px;} .indicators{width: 344px; height: 313px; left: 15px;
-    display: flex; flex-direction: column; top: 1500px;} .thirdcontainer{
-        width: 573px; height: 929px; left: -99px; top: 1800px;
-    } .messagebox{ width: 375px; height: 748px; left: 99px; top: 181px;} .footer{width: 125px;height: 150px; left: 124.5px;
-    display: flex; flex-direction: column; top: 2100px;}
+    } .imghero{width: 343px; height: 240px; left: 16px; top: 709px;}
+     .indicators{width: 344px; height: 313px; left: 15px;
+    display: flex; flex-direction: column; top: 1500px;} 
+    .concaveline{left: 170px;top: 128px;width: 151.47px;height: 19px;margin-bottom: 8.32px;}
+    .thirdcontainer{
+        width: 573px; height: 929px; left: -99px; top: 1900px;
+    }.image-jeremy{width: 343px; height: 402px; left: 16px;top: -201px;} 
+    .convexline{left: 163px;top: 261px;}
+    #titlecomment{left: 50px; width: 573px; height: 48px; align-items: center; position: absolute;top: 42px;}
+    .middle-comment{width: 343px;height: 160px;left: 115px;}
+    .name{width: 165px;height: 32px;left: 106px;top: 40px;text-align: center;}
+    .jobtitle{width: 190px;height: 26px;left: 93px;text-align: left;}
+    .messagebox{ width: 375px; height: 748px; left: 99px; top: 181px;} .footer{width: 125px;height: 150px; left: 124.5px;
+    display: flex; flex-direction: column; top:2300px; align-items: center; justify-items: center;}
 }
